# VoiceFlow

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  docker-compose.yml  voiceflow.sh
.claude/: develop-plan.md  project-notes.md  settings.json
VoiceFlowApp/: project.yml
backend/: Dockerfile  README.md  pyproject.toml  test_quick.py
backend/scripts/: migrate_db_encrypt.py
backend/scripts/data_gen/: oneri_pairs.jsonl  process_issai.py  tts_generator.py
backend/scripts/data_gen/generators/: process_issai.py  whisper_loop.py
backend/scripts/training/: README.md  convert_adapter.py  evaluate.py  lora_config.yaml  prepare_dataset.py  train_runpod.py
backend/src/voiceflow/: __init__.py  cli.py  main.py
backend/src/voiceflow/.claude/: project-notes.md
backend/src/voiceflow/api/: __init__.py  admin_routes.py  auth.py  auth_routes.py  context_routes.py  engineering_routes.py  routes.py  training_routes.py
backend/src/voiceflow/audio/: __init__.py  capture.py
backend/src/voiceflow/context/: __init__.py  chroma_retriever.py  ingestion.py
backend/src/voiceflow/core/: __init__.py  config.py  interfaces.py  rate_limit.py
backend/src/voiceflow/correction/: __init__.py  llm_corrector.py  ollama_corrector.py
backend/src/voiceflow/db/: __init__.py  cipher_connection.py  seed_sentences.py  storage.py
backend/src/voiceflow/recording/: __init__.py  segmenter.py  service.py
backend/src/voiceflow/services/: __init__.py  auth_service.py  dictionary.py  engineering.py  filler_cleaner.py  recording.py  smart_dictionary.py  snippets.py  symbol_indexer.py  tech_lexicon.py
backend/src/voiceflow/symbol/: __init__.py  extractor.py  indexer.py  injector.py  lookup.py  scanner.py
backend/src/voiceflow/transcription/: __init__.py  faster_whisper.py  whisper.py
backend/templates/admin/: base.html  dashboard.html
backend/tests/: test_correction_prompt.py  test_feedback.py  test_phonetic_dict.py  test_stop_without_headers.py
docs/: app-architecture.md  architecture.md  backend-architecture.md  enterprise-strategy.md  fine-tuning-plan.md  research-wispr-flow.md  (+4 more)
(+310 files in other folders)
