[project]
name = "voiceflow"
version = "0.1.0"
description = "Real-time speech-to-text for macOS using mlx-whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyperclip>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
voiceflow = "voiceflow.main:main"
voiceflow-cli = "voiceflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceflow"]

[tool.hatch.envs.default]
path = ".venv"
