[project]
name = "voiceflow"
version = "0.1.0"
description = "Real-time speech-to-text for macOS using mlx-whisper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.5.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pyperclip>=1.8.2",
    "mlx-lm>=0.21.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "jellyfish>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-kotlin>=1.0.0",
]

[project.optional-dependencies]
server = [
    "faster-whisper>=1.1.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]
finetune = [
    "anthropic>=0.40.0",
    "jiwer>=3.0.0",
    "soundfile>=0.12.0",
]

[project.scripts]
voiceflow = "voiceflow.main:main"
voiceflow-cli = "voiceflow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voiceflow"]

[tool.hatch.envs.default]
path = ".venv"
